# skallelego

./: README.md  pyproject.toml
skallelego/: __init__.py
tests/: test.py  test_skallelego.py
